Add background to assests

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 	<body>
 		<img src="/images/header.jpg" style="width: 100%; margin-top:50px;"/>
 		<!-- Main jumbotron for a primary marketing message or call to action -->
-		<div class="jumbotron" style="background-image: url('http://cdn.wallpapersafari.com/1/67/5MZGyp.jpg');">
+		<div class="jumbotron" style="background-image: url('/images/background.jpg');">
 			<div class="container">
 				<h1 class="display-3" style="color: #25df14; font-weight: bold;">We are SLOCORE</h1>
 				<p style="color: white">
