Prettify the rudimentary pages

--- a/views/BE-Ultimate.handlebars
+++ b/views/BE-Ultimate.handlebars
@@ -1,4 +1,4 @@
-<div style="margin-top: 60px;">
+<div style="margin-top: 60px; text-align: center;">
 	<h3>BE Ultimate is our Sponsor!</h3>
 	<p>
 		As of 2016, we've partnered with BE Ultimate . Click the image below to navigate to their page!
