--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -30,6 +30,6 @@
 		Social Media Links
 		<a href="www.facebook.com/slocoreultimate">Facebook</a>
 		<a href="https://twitter.com/CORE_ultimate">Twitter</a>
-		<a href="https://www.youtube.com/channel/UCX8L1KqpQna4okfo6I2yGXg">Youtube</a>
+		<a href="https://www.youtube.com/channel/UCX8L1KqpQna4okfo6I2yGXg">YouTube</a>
 	</p>
 </div>
