--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,21 +1,21 @@
 <div style="margin-top: 60px;">
 	<h3>Contact</h3>
 	<p>
-		Interested? Contact us!
-
-		Email us at cpslocoreultimate@gmail.com. We check the email regularly so we should get back to you pretty quickly.
-
-		Follow us on Facebook
-
-		Follow us on Twitter
-
-		Subscribe on YouTube
-
-		If you are a player and want to anonymously contact leadership, please submit this form: Player Feedback
-
-		Club President: Slater Levey 
-		Phone: (914) 560-6944 
-		CP Email: jslevey@calpoly.edu 
-		Other Email: slaterlevey@gmail.com
+		Interested? Contact us!<br/>
+		<br/>
+		Email us at cpslocoreultimate@gmail.com. We check the email regularly so we should get back to you pretty quickly.<br/>
+		<br/>
+		Follow us on <a href="www.facebook.com/slocoreultimate">Facebook</a><br/>
+		<br/>
+		Follow us on <a href="https://twitter.com/CORE_ultimate">Twitter</a><br/>
+		<br/>
+		Subscribe on <a href="https://www.youtube.com/channel/UCX8L1KqpQna4okfo6I2yGXg">YouTube</a><br/>
+		<br/>
+		If you are a player and want to anonymously contact leadership, please submit this form: Player Feedback<br/>
+		<br/>
+		Club President: Slater Levey<br/> 
+		Phone: (914) 560-6944 <br/>
+		CP Email: jslevey@calpoly.edu <br/>
+		Other Email: slaterlevey@gmail.com <br/>
 	</p>
 </div>
