--- a/views/practice.handlebars
+++ b/views/practice.handlebars
@@ -1,15 +1,15 @@
 <div style="margin-top: 60px;">
 	<h3>Practice</h3>
 	<p>
-		Practice times, Fall Quarter 2017
-
-		Monday: 7:30-10pm - Lower sports fields
-		Thursdays: 7:30-10pm - Lower sports fields
-		Saturday: 10am-1pm - Lower sports fields
-		Click here to view Map
-
-		On this map the lower sports fields are labeled “misc sports fields”
-
-		Upper fields are labeled “soccer”
+		Practice times, Fall Quarter 2017<br/>
+		<br/>
+		Monday: 7:30-10pm - Lower sports fields<br/>
+		Thursdays: 7:30-10pm - Lower sports fields<br/>
+		Saturday: 10am-1pm - Lower sports fields<br/>
+		Click here to view Map<br/>
+		<br/>
+		On this map the lower sports fields are labeled “misc sports fields”<br/>
+		<br/>
+		Upper fields are labeled “soccer”<br/>
 	</p>
 </div>
