add google analytics, update tryout news

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 				<div class="col-md-4">
 					<h2>2018 Roster Selected</h2>
 					<p>
-						After 5 weeks of open practice and two weeks of tryouts, the roster for the A-team has been set. SLOCORE took 9 new faces, five of whom were freshmen and four of whom join the roster after time on the Core B or as Core A practice players.
+						After five weeks of open practice and two weeks of tryouts, the roster for the A-team has been set. SLOCORE took 11 new faces, six of whom were freshmen and five of whom join the roster after time on the Core B or as Core A practice players.
 					</p>
 					<p>
 						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
